Fixed some readability and internal links

--- a/__src/scss/modules/_tablet.scss
+++ b/__src/scss/modules/_tablet.scss
@@ -26,7 +26,7 @@
 
 		article {
 			margin: 0 auto;
-			width: 1140px;
+			width: 760px;
 		}
 	}
 }
@@ -52,7 +52,7 @@
 
 		article {
 			margin: 0 auto;
-			width: 1140px;
+			width: 760px;
 		}
 	}
 }
